# slic

./: CMakeLists.txt  package.xml
launch/: slic_bringup.launch
src/: main.cpp  slic.cpp
